trying to fix layout issues
git-tfs-id: [http://mlwweb05:8080/tfs/defaultcollection]$/Footlocker.Logistics/Allocation/Development/SKUSetup;C25365

--- a/Allocation/Footlocker.Logistics.Allocation/Content/Site.css
+++ b/Allocation/Footlocker.Logistics.Allocation/Content/Site.css
@@ -364,13 +364,13 @@ table th
 
 #menucontainer
 {
-    margin-top:50px;
+    margin-top:70px;
 }
 
 div#title
 {
     margin-top: 0;
-    /*display:block; */
+    display:block; 
     float:left;
     text-align:left;
 }
